<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_in_fragment">

    <Button
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sum"
        app:layout_constraintBottom_toTopOf="@+id/sub"
        app:layout_constraintEnd_toStartOf="@+id/tv_result"
        app:layout_constraintStart_toEndOf="@+id/et_number1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/sub"
        android:text="@string/substraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/mult"
        app:layout_constraintEnd_toEndOf="@+id/sum"
        app:layout_constraintStart_toStartOf="@+id/sum"
        app:layout_constraintTop_toBottomOf="@+id/sum" />

    <Button
        android:id="@+id/mult"
        android:text="@string/multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/div"
        app:layout_constraintEnd_toEndOf="@+id/sum"
        app:layout_constraintStart_toStartOf="@+id/sum"
        app:layout_constraintTop_toBottomOf="@+id/sub" />

    <Button
        android:id="@+id/div"
        android:text="@string/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sum"
        app:layout_constraintStart_toStartOf="@+id/sum"
        app:layout_constraintTop_toBottomOf="@+id/mult" />

    <EditText
        android:id="@+id/et_number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_number1_hint"
        app:layout_constraintBottom_toTopOf="@+id/et_number2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:inputType="number"
        android:maxLength="3"/>

    <EditText
        android:id="@+id/et_number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_number2_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_number1"
        android:inputType="number"
        android:maxLength="3"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="@dimen/text_view_result_width"
        android:layout_height="wrap_content"
        android:hint="@string/tv_result_hint"
        android:textSize="@dimen/result_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:lines="1"
        android:scrollbars="horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>