<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_in_fragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_number"
        android:hint="@string/et_number_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBottom_toTopOf="@id/radio_group_variants"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group_variants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_number">
        <RadioButton
            android:id="@+id/rb_sum_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_sum_members_text"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_factorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_factorial_text"/>
        <RadioButton
            android:id="@+id/rb_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_random_text"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_fragment2_execute"
        android:text="@string/button_fragment2_execute_text"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_variants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_fragment2_result"
        android:hint="@string/tv_fragment2_result"
        android:textSize="@dimen/result_text_size"
        app:layout_constraintTop_toBottomOf="@+id/button_fragment2_execute"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_fragment2_remark"
        app:layout_constraintTop_toBottomOf="@+id/tv_fragment2_result"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>